--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,4 @@
-.idea/*
 
-*.xml
-
-*.xml
-
-.idea/cssdialects.xml
-
-.idea/dataSources.local.xml
-
-out/production/
-*.class
-
-.idea/workspace.xml
-
-.idea/misc.xml
-
-*.xml
-
-.idea/workspace.xml
-
-.idea/dataSources.xml
-
-.idea/cssdialects.xml
-
-.idea/cssdialects.xml
+/.idea/
+/StudyPlannerFX.iml
+/out/
