Rewrote some tests and added ganttchart changes

--- a/src/studyplanner.properties
+++ b/src/studyplanner.properties
@@ -1,3 +1,6 @@
-xdn15mcu_studyplanner.jdbc.url = jdbc:mysql://johnny.heliohost.org:3306/xdn15mcu_studyplanner
-xdn15mcu_studyplanner.jdbc.username = xdn15mcu
-xdn15mcu_studyplanner.jdbc.password = studyplannerroot
+#xdn15mcu_studyplanner.jdbc.url = jdbc:mysql://johnny.heliohost.org:3306/xdn15mcu_studyplanner
+#xdn15mcu_studyplanner.jdbc.username = xdn15mcu
+#xdn15mcu_studyplanner.jdbc.password = studyplannerroot
+xdn15mcu_studyplanner.jdbc.url=jdbc:mysql://localhost:3306/studyplanner
+xdn15mcu_studyplanner.jdbc.username=root
+xdn15mcu_studyplanner.jdbc.password=
